--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         <div class="image-placeholder">
             <img src="./pookie.gif" alt="Cute GIF">
         </div>
-        <h1 class="title">Oyee Sun Naa?? Sunegii Nehi??</h1>
+        <h1 class="title">Oyee Sun Naa? Sunegii Nahi?</h1>
         <button id="yesBtn" class="btn">Bol..🥹</button>
-        <button id="noBtn" class="btn">  Nehi?? 🗿</button>
+        <button id="noBtn" class="btn">  Nahi? 🗿</button>
     </div>
 
     <script>
