--- a/Letter.html
+++ b/Letter.html
@@ -94,12 +94,10 @@
             "I promise to stand by your side, no matter what! 🤝",
             "I promise to fill your life with love and laughter! 😍",
             "I promise to love you more every single day! 💖",
-            "I promise to bring you chocolate! 🍫",
+            "I promise to always bring you chocolate! 🍫",
             "I promise to be your safe place forever! 🏡",
             "I promise to always listen to you with my heart! ❤️",
             "I promise to be yours and only yours! 💍"
-            "I promise to make you comfortable every moment of your life !❤️"
-            "And I promise to love you forever !❤️❤️❤️"
         ];
 
         function showPromise() {
